# change-review-copilot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  dev.cmd  docker-compose.yml  turbo.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/core/: deps.py  security.py
apps/api/app/db/: session.py
apps/api/app/schemas/: __init__.py  auth.py  comparison.py  job.py  model_version.py  normalized_model.py  project.py
apps/api/app/services/: cleanup_service.py  diff_service.py  execution_service.py  explanation_service.py  export_service.py  finding_persistence_service.py  impact_service.py  job_service.py  parse_service.py  parser_registry.py  persistence_service.py  relationship_inference_service.py  storage_service.py
apps/api/app/tests/: conftest.py  conftest_postgres.py  helpers.py  test_api_auth_projects.py  test_api_full_flow.py  test_auth_and_project_flow.py  test_cleanup_service.py  test_cleanup_service_comparison.py  test_comparison_job_flow.py  test_delete_comparison_endpoint.py  test_delete_endpoints.py  test_diff_service.py  test_diff_service_heuristics.py  test_export_download_flow.py  test_html_export.py  test_impact_service.py  test_json_normalized_parser_adapter.py  test_mesh_parser_adapter.py  test_mesh_parser_stub.py  test_mesh_upload_parse_flow.py  test_parse_service.py  test_parser_capabilities_route.py  test_queue_integration_scaffold.py  test_relationship_inference_service.py  (+3 more)
apps/api/change_review_copilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+115 files in other folders)
