[project]
name = "change-review-copilot-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "passlib>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "reportlab>=4.2.2",
  "trimesh>=4.11.5"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
